fix: extra margin for topic footer

--- a/less/ariastel/index.less
+++ b/less/ariastel/index.less
@@ -42,7 +42,6 @@
   align-items: center;
 
   &>* {
-    margin-right: 2px;
     margin-left: 2px;
   }
 
